refact some class to interface